--- a/displayer/Cargo.toml
+++ b/displayer/Cargo.toml
@@ -16,3 +16,4 @@ epd-waveshare = { git = "https://github.com/caemor/epd-waveshare", branch = "mas
 get_if_addrs = "^0.5"
 linux-embedded-hal = "0.2"
 sdl2 = { version = "0.31", optional = true }
+structopt = "0.3"
