--- a/displayer/Cargo.toml
+++ b/displayer/Cargo.toml
@@ -15,5 +15,6 @@ embedded-hal = { version = "^0.2", features = ["unproven"] }
 epd-waveshare = { git = "https://github.com/caemor/epd-waveshare", branch = "master", features = ["epd7in5", "graphics"], optional = true }
 get_if_addrs = "^0.5"
 linux-embedded-hal = "0.2"
+rusttype = "^0.8"
 sdl2 = { version = "0.31", optional = true }
 structopt = "0.3"
