--- a/displayer/Cargo.toml
+++ b/displayer/Cargo.toml
@@ -22,7 +22,7 @@ sdl2 = { version = "0.31", optional = true }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "^1.0"
 structopt = "0.3"
-tokio = { version = "0.2", features = ["full"] }
+tokio = { version = "0.2", features = ["dns", "rt-threaded", "stream", "tcp", "time"] }
 tokio-serde = { version = "^0.6", features = ["json"] }
 tokio-util = { version = "0.2.0", features = ["codec"] }
 toml = "^0.5"
