--- a/hub/Cargo.toml
+++ b/hub/Cargo.toml
@@ -8,6 +8,6 @@ edition = "2018"
 futures = "^0.3"
 protocol = { version = "0.1.0", path = "../protocol" }
 serde_json = "^1.0"
-tokio = { version = "0.2", features = ["full"] }
+tokio = { version = "0.2", features = ["dns", "macros", "rt-threaded", "tcp", "time"] }
 tokio-serde = { version = "^0.6", features = ["json"] }
 tokio-util = { version = "0.2.0", features = ["codec"] }
