--- a/hub/Cargo.toml
+++ b/hub/Cargo.toml
@@ -1,13 +1,15 @@
 [package]
-name = "hub"
+name = "rc_stickynote_hub"
 version = "0.1.0"
 authors = ["Peter Williams <peter@newton.cx>"]
 edition = "2018"
 
 [dependencies]
+egg-mode = { git = "https://github.com/QuietMisdreavus/twitter-rs", branch = "master" }
 futures = "^0.3"
 protocol = { version = "0.1.0", path = "../protocol" }
 serde_json = "^1.0"
+structopt = "^0.3"
 tokio = { version = "0.2", features = ["dns", "macros", "rt-threaded", "tcp", "time"] }
 tokio-serde = { version = "^0.6", features = ["json"] }
 tokio-util = { version = "0.2.0", features = ["codec"] }
