protocol: rename crate to rc_stickynote_protocol

--- a/protocol/Cargo.toml
+++ b/protocol/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "protocol"
+name = "rc_stickynote_protocol"
 version = "0.1.0"
 authors = ["Peter Williams <peter@newton.cx>"]
 edition = "2018"
