--- a/displayer/Cargo.toml
+++ b/displayer/Cargo.toml
@@ -17,7 +17,7 @@ epd-waveshare = { git = "https://github.com/caemor/epd-waveshare", branch = "mas
 futures = "^0.3"
 get_if_addrs = "^0.5"
 linux-embedded-hal = "0.2"
-protocol = { version = "0.1.0", path = "../protocol" }
+rc_stickynote_protocol = { version = "0.1.0", path = "../protocol" }
 rusttype = "^0.8"
 sdl2 = { version = "0.31", optional = true }
 serde = { version = "1.0", features = ["derive"] }
