--- a/hub/Cargo.toml
+++ b/hub/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [dependencies]
 egg-mode = { git = "https://github.com/QuietMisdreavus/twitter-rs", branch = "master" }
 futures = "^0.3"
-protocol = { version = "0.1.0", path = "../protocol" }
+rc_stickynote_protocol = { version = "0.1.0", path = "../protocol" }
 serde_json = "^1.0"
 structopt = "^0.3"
 tokio = { version = "0.2", features = ["dns", "macros", "rt-threaded", "tcp", "time"] }
