Add a timestamp to the "person is:" status message

--- a/protocol/Cargo.toml
+++ b/protocol/Cargo.toml
@@ -5,4 +5,5 @@ authors = ["Peter Williams <peter@newton.cx>"]
 edition = "2018"
 
 [dependencies]
+chrono = { version = "^0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
