displayer: add an SSH transport!
Had to do some research to figure out how to get the pieces to fit together,
but the actual implementation turns out to be not that much code.

--- a/displayer/Cargo.toml
+++ b/displayer/Cargo.toml
@@ -10,6 +10,7 @@ simulator = ["sdl2"]
 waveshare = ["epd-waveshare"]
 
 [dependencies]
+async-ssh2 = { git = "https://github.com/spebern/async-ssh2.git", branch = "master" }
 chrono = "^0.4"
 embedded-graphics = "^0.5"
 embedded-hal = { version = "^0.2", features = ["unproven"] }
