--- a/displayer/Cargo.toml
+++ b/displayer/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Peter Williams <peter@newton.cx>"]
 edition = "2018"
 
 [features]
-default = ["waveshare"]
+default = ["async-ssh2/vendored-openssl", "waveshare"]
 simulator = ["sdl2"]
 waveshare = ["epd-waveshare"]
 
