--- a/displayer/Cargo.toml
+++ b/displayer/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "displayer"
+name = "rc_stickynote_displayer"
 version = "0.1.0"
 authors = ["Peter Williams <peter@newton.cx>"]
 edition = "2018"
