displayer: not-really-tested code for daemonization

--- a/displayer/Cargo.toml
+++ b/displayer/Cargo.toml
@@ -13,6 +13,7 @@ waveshare = ["epd-waveshare"]
 async-ssh2 = { git = "https://github.com/spebern/async-ssh2.git", branch = "master" }
 chrono = "^0.4"
 confy = "^0.3"
+daemonize = "^0.4"
 embedded-graphics = "^0.5"
 embedded-hal = { version = "^0.2", features = ["unproven"] }
 epd-waveshare = { git = "https://github.com/caemor/epd-waveshare", branch = "master", features = ["epd7in5", "graphics"], optional = true }
