semi-pi-gen/stage2/02-net-tweaks/files/wait.conf: longer delay
The Harvard insecure WiFi requires multiple connection attempts
and so takes a long time to get going.

--- a/semi-pi-gen/stage2/02-net-tweaks/files/wait.conf
+++ b/semi-pi-gen/stage2/02-net-tweaks/files/wait.conf
@@ -1,3 +1,6 @@
+# Note that the double "ExecStart" line is intentional.
+
 [Service]
 ExecStart=
 ExecStart=/usr/lib/dhcpcd5/dhcpcd -q -w
+TimeoutStartSec=300
