--- a/hub/Cargo.toml
+++ b/hub/Cargo.toml
@@ -8,8 +8,10 @@ edition = "2018"
 # egg-mode = { git = "https://github.com/QuietMisdreavus/twitter-rs", branch = "master" }
 futures = "^0.3"
 rc_stickynote_protocol = { version = "0.1.0", path = "../protocol" }
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "^1.0"
 structopt = "^0.3"
 tokio = { version = "0.2", features = ["dns", "macros", "rt-threaded", "stream", "sync", "tcp", "time"] }
 tokio-serde = { version = "^0.6", features = ["json"] }
 tokio-util = { version = "0.2.0", features = ["codec"] }
+toml = "^0.5"
