displayer: update epd-waveshare reference

--- a/displayer/Cargo.toml
+++ b/displayer/Cargo.toml
@@ -16,7 +16,7 @@ confy = "^0.3"
 daemonize = "^0.4"
 embedded-graphics = "^0.5"
 embedded-hal = { version = "^0.2", features = ["unproven"] }
-epd-waveshare = { git = "https://github.com/caemor/epd-waveshare", branch = "master", features = ["epd7in5", "graphics"], optional = true }
+epd-waveshare = { git = "https://github.com/caemor/epd-waveshare", rev = "35291fe639fef3783e28a410f549d24e758a52ac", features = ["epd7in5", "graphics"], optional = true }
 futures = "^0.3"
 get_if_addrs = "^0.5"
 linux-embedded-hal = "0.2"
